--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,3 @@
-
 name: flutter_product_app
 description: A simple Flutter app with Home and Product Detail screens.
 publish_to: 'none'
@@ -10,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  http: ^0.13.6       # ← here, two spaces under "dependencies", not under "flutter"
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -20,5 +21,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/laptop.jpg
-    - assets/images/header.jpg 
+    - assets/images/header.jpg
     - assets/images/lapt.png
